--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Dir Hunter",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Crawl through myriad nested directories to locate and extract files to facilitate segregation based on their respective file types",
-  "main": "app.js",
+  "main": "index.js",
   "author": "Ben Merchant <benjaminmerchant@gmail.com>",
   "license": "MIT"
 }
